# fmqa

./: .gitignore  README.md  pyproject.toml  setup.py
fmqa/: __init__.py  annealing.py  example_plot.py  factorization_machine.py  fm_binary_quadratic_model.py
tests/: conftest.py  test_annealing.py  test_factorization_machine.py  test_fmbqm.py
