[tool.poetry]
name = "fmqa"
version = "0.1.0"
description = ""
authors = ["ShuichiFukuda <shuichi.fukuda@ficy-tech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dimod = "^0.12.21"
pytest = "^9.0.2"
torch = ">=2.0.0"
pip-audit = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
